--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html>
     <head>
         <title>Hakan Karatas</title>
+        <link rel ="stylesheet" href="style.css" >
     </head>
     <body>
 
+        <header>
         <h1>Hakan Karatas</h1>
-
-        <nav>            
-            <a href="https://www.google.com">Google</a>
-            <a href="https://www.wikipedia.org">Wikipedia</a>
-        </nav>
-
+            <nav>            
+                <a href="https://www.google.com">Google</a>
+                <a href="https://www.wikipedia.org">Wikipedia</a>
+            </nav>
+        </header>
+        
         <section>
             <h2>Favorite Movies</h2>
             <ul>
